[project]
name = "revit-mcp-clean"
version = "0.1.0"
description = "Minimal Revit MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    # httpx is pulled in transitively by mcp[cli], listed here for clarity:
    "httpx>=0.27",
    # RAG (inactive) — uncomment to enable:
    # "chromadb>=1.5.5",
    # "sentence-transformers>=5.3.0",
]
